Bug 448702 - Activity based layouts resets on boot
Summary: Activity based layouts resets on boot
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: containment (other bugs)
Version First Reported In: git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-18 11:17 UTC by shatz.dan
Modified: 2022-01-25 08:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shatz.dan 2022-01-18 11:17:58 UTC
Git version ee307a075941174d4f57fffb4765addcec6b20df
"
STEPS TO REPRODUCE
1.  Create a latte layout (mine attached)
2.  Use "Multiple layouts based on activities" mode
3. Make some changes to the layout (e.g. add an applet to a panel)
4. Restart the computer (or latte-dock --replace)

OBSERVED RESULT
Changes made in step 3 disappear.
Dialog opens saying: "Multiple layouts mode was not closed properly. Updating layouts to address incosistencies."

EXPECTED RESULT
Changes are saved, no dialog.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.24.80
(available in About System)
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
To be completed
Comment 1 Michail Vourlakos 2022-01-18 11:21:54 UTC
1. Wayland?
2.As a temp workaround close Latte before loging out

The multiple layouts infrastructure is scheduled to change in order to fix this issue.
Comment 2 shatz.dan 2022-01-18 11:46:48 UTC
Understood, thanks!
Yes, it's Wayland.
Comment 3 Michail Vourlakos 2022-01-25 08:11:58 UTC
Git commit c7bb46b2172602491efd0ef551f3d425bc235f87 by Michail Vourlakos.
Committed on 25/01/2022 at 07:58.
Pushed by mvourlakos into branch 'master'.

introduce new MultipleLayouts mechanism

--the new approach does not load/unload layouts
during startup/exit. When the user loads layouts
in multiple layouts mode the layouts are inserted
and when exit they still remain in the hidden
multiple layouts file. These layouts present in the
multiple layouts file from now are called preloaded
layouts.
--the new approach fixes also the wayland exit
issue and in general the message for Latte not
closed properly has been totally dropped.
Related: bug 446205

M  +13   -0    app/apptypes.h
M  +4    -0    app/lattecorona.cpp
M  +32   -0    app/layouts/importer.cpp
M  +6    -0    app/layouts/importer.h
M  +6    -2    app/layouts/manager.cpp
M  +62   -0    app/layouts/storage.cpp
M  +3    -0    app/layouts/storage.h
M  +51   -13   app/layouts/synchronizer.cpp
M  +4    -2    app/layouts/synchronizer.h

https://invent.kde.org/plasma/latte-dock/commit/c7bb46b2172602491efd0ef551f3d425bc235f87