app/layouts/manager.cpp
@@ -52,6 +52,10 @@ Manager::Manager(QObject *parent)
 
 Manager::~Manager()
 {
+    if (memoryUsage() == Latte::MemoryUsage::MultipleLayouts) {
+        m_importer->setMultipleLayoutsStatus(Latte::MultipleLayouts::Paused);
+    }
+
     m_importer->deleteLater();
     m_syncedLaunchers->deleteLater();
 
@@ -231,7 +235,7 @@ bool Manager::switchToLayout(QString layoutName,  MemoryUsage::LayoutsMemory new
 
 void Manager::loadLayoutOnStartup(QString layoutName)
 {
-    QStringList layouts = m_importer->checkRepairMultipleLayoutsLinkedFile();
+ /*   QStringList layouts = m_importer->checkRepairMultipleLayoutsLinkedFile();
 
     //! Latte didn't close correctly, maybe a crash
     if (layouts.size() > 0) {
@@ -255,7 +259,7 @@ void Manager::loadLayoutOnStartup(QString layoutName)
                                        KMessageBox::NoExec,
                                        QString());
         dialog->show();
-    }
+    }*/
 
     m_synchronizer->switchToLayout(layoutName);
 }
